--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <properties>
 		<javax.version>2.5</javax.version>
-		<odata.version>4.6.0-SNAPSHOT</odata.version>
+		<odata.version>4.5.0</odata.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
